# state-of-the-llms

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
.claude/skills/prep-demo/: SKILL.md
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: models.csv  pricing.csv  usage.csv
docs/: architecture.md  constitution.md
docs/adr/: 0001-streamlit-csv-vibe-stack.md  0002-specs-over-plan-md.md  0003-deterministic-chips-llm-narration.md
docs/decisions/: 0001-streamlit-chassis-pure-core.md  0002-real-usage-derived-offline.md  0003-chips-not-chatbot.md
docs/superpowers/plans/: 2026-05-30-state-of-the-llms.md
docs/superpowers/specs/: 2026-05-30-state-of-the-llms-design.md
scripts/: derive_usage.py  prep_demo.sh  validate_models.py
specs/: README.md  REQUIREMENTS_TEMPLATE.md  mission.md  roadmap.md  tech-stack.md
specs/2026-05-30-state-of-the-llms/: plan.md  requirements.md  validation.md
src/sotl/: __init__.py  chips.py  config.py  data.py  frontier.py  narrate.py  recommend.py  theme.py  trust.py  usage.py
tests/: test_chips.py  test_config.py  test_data.py  test_frontier.py  test_narrate.py  test_recommend.py  test_trust.py  test_usage.py  test_validate_models.py
