[project]
name = "sotl"
version = "0.1.0"
description = "State of the LLMs — a model-selection data story (Gen Academy Week 1)."
requires-python = ">=3.12,<3.13"
dependencies = [
    "streamlit>=1.40",
    "pandas>=2.2",
    "plotly>=5.24",
    "openai>=1.55",
    "pydantic-settings>=2.6",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sotl"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
